# tw-stock-scanner-report

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: daily-report.yml
docs/: github_deploy.md
scanner/: __init__.py  cli.py  config.py  db.py  indicators.py  report.py  sources.py  strategy.py  telegram_bot.py  telegram_notify.py
scripts/: telegram_get_chats.py  update_daily.sh
